application-load-balancer.tf
resource "aws_alb" "ecs-load-balancer" {
  name                = "terraform-ecs-load-balancer"
  security_groups     = ["${aws_security_group.alb_http.id}"]
  subnets             = ["${aws_subnet.public_1.id}", "${aws_subnet.public_2.id}"]

  tags {
    Name = "terraform-ecs-load-balancer"
  }
}

resource "aws_alb_target_group" "ecs-target-group" {
  name                = "terraform-ecs-target-group"
  port                = "80"
  protocol            = "HTTP"
  vpc_id              = "${aws_vpc.terraform_vpc.id}"
	depends_on = [
		"aws_alb.ecs-load-balancer",
	]

  health_check {
    healthy_threshold   = "5"
    unhealthy_threshold = "2"
    interval            = "30"
    matcher             = "200"
    path                = "/"
    port                = "traffic-port"
    protocol            = "HTTP"
    timeout             = "5"
  }

  tags {
    Name = "terraform-ecs-target-group"
  }
}

resource "aws_alb_listener" "alb-listener" {
  load_balancer_arn = "${aws_alb.ecs-load-balancer.arn}"
  port              = "80"
  protocol          = "HTTP"

  default_action {
    target_group_arn = "${aws_alb_target_group.ecs-target-group.arn}"
    type             = "forward"
  }
}
